# entity_matching

./: .gitignore  README.md  data_v10.json  output.txt  pyproject.toml
src/entity_matching/: __init__.py  entity_matching.py  stem.py
src/entity_matching/utils/: llm_utils.py
