[project]
name = "entity-matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "awepo-pro", email = "dc22762@umac.mo" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
entity-matching = "entity_matching:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
